db-cluster/users/k8s-cluster2/ns-pengseangsim210-gmail-com-9d7d574c/postgreswgveh5/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgreswgveh5-tcp
  namespace: ns-pengseangsim210-gmail-com-9d7d574c
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`postgres-db.seang.shop`)
    services:
    - name: postgreswgveh5-postgresql-rw
      port: 5432
  tls:
    passthrough: true
